k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  clusterIP: None          # Headless service → très important pour StatefulSet
